[package]
name = "app-bindings"
version = "0.1.5"
description = "A set of JavaScript/TypeScript bindings for Sogouda"
authors = ["Ashlynne Juniper"]
license = "MPL-2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
sogouda_core = "0.1"
